feat(client): professional preferences

--- a/packages/client/public/locales/en/translation.json
+++ b/packages/client/public/locales/en/translation.json
@@ -62,6 +62,8 @@
       "phone": "Phone Number",
       "yourDescription": "Your description",
       "language": "Language",
+      "yearOfBirth": "Year of your birth",
+      "college": "Name of  the College / University where you obtained your chiropractic degree",
       "submit": "Update Preferences",
       "aboutYourself": "About yourself",
       "about": "About your practice",
@@ -73,14 +75,14 @@
       "phd": "PhD degree",
       "chiropracticSpecialtyDegree": "Chiropractic specialty degree",
       "postGraduateDiploma": "Post graduate diploma / micro-program",
-      "nbPatients": "Your mean number of patient visit per week",
-      "describe": "Describe your practice",
+      "averagePatientsVisits": "Average number of patient’s visits per week",
+      "averageNewPatients": "Average number of new patients per week",
+      "describe": "Do you practice with other professionals  at the same clinic",
       "solo": "Solo practitioner",
       "otherChiros": "Other chiropractor(s) at practice",
       "otherNonChiropractic": "Other non-chiropractic healthcare practitioner available at same location",
-      "approach": "Could you please indicate which treatment approach you usemost frequently. These treatment options will appear in the section related to your patients Plan of Management.",
-      "manipulative": "Manipulative / Ajustive techniques & procedure",
-      "nonAdjustive": "Non adjustive techniques & procedures"
+      "radiologyService": "Radiology services available on the clinic’s premises",
+      "approach": "Could you please indicate which treatment approach you usemost frequently. These treatment options will appear in the section related to your patients Plan of Management."
     },
     "patient": {
       "view": "View",
@@ -251,45 +253,91 @@
     },
     "planOfManagement": "Plan of Management",
     "techniques": {
-      "diversified": "Diversified",
-      "extremityManipulating": "Extremity Manipulating / Adjusting",
-      "activatorMethod": "Adjustive Instrument: Activator method",
-      "arthroStim": "Adjustive Instrument: ArthroStim",
-      "impulseAdjustingInstrument": "Adjustive Instrument: Impulse adjusting instrument",
-      "gonstead": "Gonstead",
-      "cox": "Cox flexion/distraction",
-      "thompson": "Thompson",
-      "sot": "Sacro-Occipital Technique (SOT)",
-      "hio": "HIO / Atlas Orthogonal",
-      "nimmo-tonus": "Nimmo-Tonus",
-      "loganBasic": "Logan Basic",
-      "meric": "Meric",
-      "pierce-stillwagon": "Pierce-Stillwagon",
-      "mobilization": "Mobilization/ Manual traction",
-      "graston": "Soft-tissue therapy: Graston",
-      "myofascialRelease": "Soft-tissue therapy: ART / myofascial release",
-      "ischemicCompression": "Soft-tissue therapy: Ischemic compression / trigger point therapy",
-      "massageTherapy": "Soft-tissue therapy: Massage therapy",
-      "motorizedTraction": "Motorized traction / spinal decompression",
-      "formalPatientEducation": "Formal patient education",
-      "ergonomicInstructions": "Ergonomic instructions",
-      "nutritionalCounseling": "Nutritional counseling",
-      "exerciseInstruction": "Exercise instruction / prescription",
-      "cold": "Cold / ice",
-      "heat": "Heat",
-      "orthotics": "Orthotics/ lifts",
-      "orthopedicSupports": "Orthopedic supports / Brace",
-      "casting": "Casting/ Taping",
-      "electricalStimulation": "Electrical stimulation",
-      "interferentialCurrent": "Interferential current",
-      "directCurrent": "Direct Current",
-      "diathermy": "Diathermy",
-      "ultrasound": "Ultrasound",
-      "acupuncture": "Acupuncture",
-      "dryNeedling": "Dry needling",
-      "shockwave": "Shockwave",
-      "coldLaser": "Cold laser",
-      "other": "Other"
+      "categories": {
+        "hvla": "High-velocity Low-amplitude (HVLA) manipulation or Mobilization Techniques",
+        "mechanicalAssisted": "Mechanical assisted articular adjustment, mobilisation or traction instruments & techniques",
+        "softTissue": "Soft Tissue Techniques & Ancillary Procedures",
+        "tonal": "Tonal/Reflex Techniques",
+        "recommendations": "Recommendations",
+        "other": "Other techniques or treatment modalities"
+      },
+      "title": "Indicate the types of treatments & modalities you provide in your practice.  (These choices will then appear in your reports and allow you to specifically define your patient’s plan of management.)",
+      "blairAnalysisAndAdjustingTechnique": "Blair analysis and Adjusting Technique",
+      "cranialTherapy": "Cranial Therapy",
+      "diversifiedTechnique": "Diversified Technique",
+      "extremityManipulating/Adjusting": "Extremity manipulating/ adjusting",
+      "fullSpineSpecificChiropracticTechnique": "Full Spine Specific Chiropractic Technique (Meric)",
+      "gonsteadTechnique": "Gonstead Technique",
+      "manualMobilisation &Traction": "Manual mobilisation & traction",
+      "mcTimoney": "McTimoney",
+      "nationalUpperCervicalChiropracticAssociation": "National Upper Cervical Chiropractic Association (NUCCA)",
+      "pediatricAdjustment": "Pediatric Adjustment",
+      "petitbonAdjustingInstrument &Technique": "Petitbon Adjusting Instrument & Technique",
+      "touchAndHoldTechnique": "Touch and Hold Technique (Pediatric)",
+      "activatorAdjustingInstrument &Technique": "Activator Adjusting Instrument & Technique",
+      "appliedSpinalBiomechanicalEngineering": "Applied Spinal Biomechanical Engineering",
+      "arthroStim": "ArthroStim",
+      "atlasOrthogonalSweatAdustingInstrumentTechnique": "Atlas Orthogonal-Sweat Adusting Instrument Technique",
+      "coxTechnique": "Cox Technique (flexion-distraction)",
+      "impulseAdjustingInstrument": "Impulse Adjusting Instrument",
+      "jenneticsProcedureAndInstrument": "Jennetics Procedure and Instrument",
+      "leanderTechnique": "Leander Technique",
+      "neuroImpulseProtocol": "Neuro-Impulse Protocol",
+      "neuroVertebralDecompressionTherapy": "Neuro-Vertebral Decompression Therapy",
+      "pierceResultsSystem": "Pierce Results System",
+      "proAdjusterSigmaInstruments": "Pro Adjuster Sigma Instruments",
+      "pulStarSystem": "PulStar System",
+      "sacroOccipitalTechnique": "Sacro-occipital Technique (SOT)",
+      "thompsonTechnique": "Thompson Technique",
+      "toftnessAdjustingTechnique": "Toftness Adjusting Technique",
+      "toggleRecoilTechnique": "Toggle Recoil Technique",
+      "torqueReleaseTechniqueAndInstrument": "Torque Release Technique and Instrument",
+      "activeReleaseTechnique": "Active Release Technique (ART)",
+      "crossFiberFrictionTechnique": "Cross Fiber Friction Technique",
+      "cryotherapy": "Cryotherapy",
+      "dryNeedlingTherapy/acupuncture": "Dry Needling Therapy/Acupuncture",
+      "electrotherapy": "Electrotherapy",
+      "graston": "Graston",
+      "heatTherapy": "Heat therapy",
+      "highPowerLaserTherapy": "High Power Laser Therapy",
+      "instrumentAssistedSoftTissueMobilization": "Instrument-Assisted Soft Tissue Mobilization",
+      "kinesiotaping": "Kinesiotaping",
+      "lowLevelLaserTherapy": "Low Level Laser Therapy",
+      "massage": "Massage",
+      "muscleEnergyTechnique": "Muscle Energy Technique",
+      "myofascialRelease": "Myofascial Release",
+      "nimmo": "Nimmo",
+      "pinAndReleaseTechnique": "Pin and Release Technique",
+      "shockwaveTherapy": "Shockwave Therapy",
+      "spray &StetchTechnique": "Spray & Stetch Technique",
+      "strain/counterStrainTechnique": "Strain/Counter-Strain Technique",
+      "therapeuticVibration": "Therapeutic Vibration (Direct or whole body)",
+      "triggerPointTherapy &IschemicCompression": "Trigger Point Therapy & ischemic compression",
+      "ultrasoundTherapy": "Ultrasound Therapy",
+      "webster": "Webster",
+      "bioEnergeticSynchronizationTechnique": "Bio-Energetic Synchronization Technique (BEST)",
+      "bioGeometricIntegration": "Bio-Geometric Integration (BGI)",
+      "chiropracticManipulativeReflexTechnique": "Chiropractic Manipulative Reflex Technique (CMRT)",
+      "directionalNonForceTechniqueVanRumpt": "Directional Non-Force Technique-Van Rumpt",
+      "korenSpecificTechnique": "Koren Specific Technique",
+      "loganBasicTechnique": "Logan Basic Technique",
+      "networkSpinalAnalysis": "Network Spinal Analysis (NSA)",
+      "neuroEmotionalTechnique": "Neuro-Emotional Technique (NET)",
+      "talskyTonalChiropractic": "Talsky Tonal Chiropractic",
+      "tonalIntegrativeTechnique": "Tonal Integrative Technique",
+      "education": "Education",
+      "ergonomicAdvices": "Ergonomic advices",
+      "exercisePrescription": "Exercise prescription",
+      "footOrthotics": "Foot Orthotics (fabrication and modification)",
+      "herbalMedicine": "Herbal Medicine",
+      "nutritionalPrescription": "Nutritional prescription",
+      "orthotics &Brace": "Orthotics & brace (prescription)",
+      "psychosocialRiskFactorManagement": "Psychosocial risk factor management",
+      "weightReductionProgram": "Weight reduction program",
+      "appliedKinesiology": "Applied Kinesiology",
+      "chiropracticBioPhysics": "Chiropractic BioPhysics (CBP)",
+      "exerciseSupervision": "Exercise supervision",
+      "functionalNeurology": "Functional Neurology"
     },
     "other": "Other (separate by comma)",
     "gecc": "Global Expectation Of Clinical Change",
