--- a/packages/client/public/locales/fr/translation.json
+++ b/packages/client/public/locales/fr/translation.json
@@ -61,6 +61,8 @@
       "clinic": "Nom de la clinique",
       "phone": "Numéro de Téléphone",
       "yourDescription": "Votre description",
+      "yearOfBirth": "Votre année de naissance",
+      "college": "Nom du collège/université où vous avez obtenu votre diplôme en chiropratique",
       "language": "Langue",
       "submit": "Mettre À Jour",
       "aboutYourself": "À propos de vous",
@@ -73,14 +75,14 @@
       "phd": "Doctorat (PhD)",
       "chiropracticSpecialtyDegree": "Diplôme de spécialité chiropratique",
       "postGraduateDiploma": "Diplôme d'études post-graduée / micro-programme",
-      "nbPatients": "Votre nombre moyen de visites de patients par semaine",
-      "describe": "Décrivez votre pratique",
+      "averagePatientsVisits": "Nombre de traitements prodigués en moyenne par semaine",
+      "averageNewPatients": "Nombre de nouveaux patients en moyenne par semaine",
+      "describe": "Pratiquez vous avec d’autres professionnel  dans la même clinique",
       "solo": "Praticien seul",
       "otherChiros": "Autre(s) chiropraticien(s) au cabinet",
       "otherNonChiropractic": "Autre professionnel de la santé non-chiropratique disponible au même endroit",
-      "approach": "Pourriez-vous s'il vous plaît indiquer quelle approche de traitement vous utilisez le plus fréquemment. Ces options de traitement apparaîtront dans la section relative au plan de gestion de vos patients.",
-      "manipulative": "Techniques et procédures manipulatrices/ajustives",
-      "nonAdjustive": "Techniques et procédures non ajustives"
+      "radiologyService": "Service de radiology offer à votre clinique même",
+      "approach": "Pourriez-vous s'il vous plaît indiquer quelle approche de traitement vous utilisez le plus fréquemment. Ces options de traitement apparaîtront dans la section relative au plan de gestion de vos patients."
     },
     "patient": {
       "view": "Voir",
@@ -251,45 +253,91 @@
     },
     "planOfManagement": "Plan de soins",
     "techniques": {
-      "diversified": "Diversified",
-      "extremityManipulating": "Extremity Manipulating / Adjusting",
-      "activatorMethod": "Adjustive Instrument: Activator method",
-      "arthroStim": "Adjustive Instrument: ArthroStim",
-      "impulseAdjustingInstrument": "Adjustive Instrument: Impulse adjusting instrument",
-      "gonstead": "Gonstead",
-      "cox": "Cox flexion/distraction",
-      "thompson": "Thompson",
-      "sot": "Sacro-Occipital Technique (SOT)",
-      "hio": "HIO / Atlas Orthogonal",
-      "nimmo-tonus": "Nimmo-Tonus",
-      "loganBasic": "Logan Basic",
-      "meric": "Meric",
-      "pierce-stillwagon": "Pierce-Stillwagon",
-      "mobilization": "Mobilization/ Manual traction",
-      "graston": "Soft-tissue therapy: Graston",
-      "myofascialRelease": "Soft-tissue therapy: ART / myofascial release",
-      "ischemicCompression": "Soft-tissue therapy: Ischemic compression / trigger point therapy",
-      "massageTherapy": "Soft-tissue therapy: Massage therapy",
-      "motorizedTraction": "Motorized traction / spinal decompression",
-      "formalPatientEducation": "Formal patient education",
-      "ergonomicInstructions": "Ergonomic instructions",
-      "nutritionalCounseling": "Nutritional counseling",
-      "exerciseInstruction": "Exercise instruction / prescription",
-      "cold": "Cold / ice",
-      "heat": "Heat",
-      "orthotics": "Orthotics/ lifts",
-      "orthopedicSupports": "Orthopedic supports / Brace",
-      "casting": "Casting/ Taping",
-      "electricalStimulation": "Electrical stimulation",
-      "interferentialCurrent": "Interferential current",
-      "directCurrent": "Direct Current",
-      "diathermy": "Diathermy",
-      "ultrasound": "Ultrasound",
-      "acupuncture": "Acupuncture",
-      "dryNeedling": "Dry needling",
-      "shockwave": "Shockwave",
-      "coldLaser": "Cold laser",
-      "other": "Other"
+      "categories": {
+        "hvla": "Techniques d’ajustement (avec une force de  haute vélocité et basse amplitude) ou de mobilisation",
+        "mechanicalAssisted": "Ajustement articulaire, mobilisation ou traction assisté mécaniquement",
+        "softTissue": "Techniques pour tissus mous et procédures complémentaire",
+        "tonal": "Techniques réflexives et toniques",
+        "recommendations": "Recommandations",
+        "other": "Autres techniques ou modalités thérapeutiques"
+      },
+      "title": "Indiquez les modalités/ outils thérapeutiques employés dans votre pratique. (Ces choix apparaitront dans vos rapports et vous pourrez ainsi définir précisément le plan de traitement de chaque patient.)",
+      "blairAnalysisAndAdjustingTechnique": "Blair analysis and Adjusting Technique",
+      "cranialTherapy": "Cranial Therapy",
+      "diversifiedTechnique": "Diversified Technique",
+      "extremityManipulating/Adjusting": "Extremity manipulating/ adjusting",
+      "fullSpineSpecificChiropracticTechnique": "Full Spine Specific Chiropractic Technique (Meric)",
+      "gonsteadTechnique": "Gonstead Technique",
+      "manualMobilisation &Traction": "Manual mobilisation & traction",
+      "mcTimoney": "McTimoney",
+      "nationalUpperCervicalChiropracticAssociation": "National Upper Cervical Chiropractic Association (NUCCA)",
+      "pediatricAdjustment": "Pediatric Adjustment",
+      "petitbonAdjustingInstrument &Technique": "Petitbon Adjusting Instrument & Technique",
+      "touchAndHoldTechnique": "Touch and Hold Technique (Pediatric)",
+      "activatorAdjustingInstrument &Technique": "Activator Adjusting Instrument & Technique",
+      "appliedSpinalBiomechanicalEngineering": "Applied Spinal Biomechanical Engineering",
+      "arthroStim": "ArthroStim",
+      "atlasOrthogonalSweatAdustingInstrumentTechnique": "Atlas Orthogonal-Sweat Adusting Instrument Technique",
+      "coxTechnique": "Cox Technique (flexion-distraction)",
+      "impulseAdjustingInstrument": "Impulse Adjusting Instrument",
+      "jenneticsProcedureAndInstrument": "Jennetics Procedure and Instrument",
+      "leanderTechnique": "Leander Technique",
+      "neuroImpulseProtocol": "Neuro-Impulse Protocol",
+      "neuroVertebralDecompressionTherapy": "Neuro-Vertebral Decompression Therapy",
+      "pierceResultsSystem": "Pierce Results System",
+      "proAdjusterSigmaInstruments": "Pro Adjuster Sigma Instruments",
+      "pulStarSystem": "PulStar System",
+      "sacroOccipitalTechnique": "Sacro-occipital Technique (SOT)",
+      "thompsonTechnique": "Thompson Technique",
+      "toftnessAdjustingTechnique": "Toftness Adjusting Technique",
+      "toggleRecoilTechnique": "Toggle Recoil Technique",
+      "torqueReleaseTechniqueAndInstrument": "Torque Release Technique and Instrument",
+      "activeReleaseTechnique": "Active Release Technique (ART)",
+      "crossFiberFrictionTechnique": "Cross Fiber Friction Technique",
+      "cryotherapy": "Cryotherapy",
+      "dryNeedlingTherapy/acupuncture": "Dry Needling Therapy/Acupuncture",
+      "electrotherapy": "Electrotherapy",
+      "graston": "Graston",
+      "heatTherapy": "Heat therapy",
+      "highPowerLaserTherapy": "High Power Laser Therapy",
+      "instrumentAssistedSoftTissueMobilization": "Instrument-Assisted Soft Tissue Mobilization",
+      "kinesiotaping": "Kinesiotaping",
+      "lowLevelLaserTherapy": "Low Level Laser Therapy",
+      "massage": "Massage",
+      "muscleEnergyTechnique": "Muscle Energy Technique",
+      "myofascialRelease": "Myofascial Release",
+      "nimmo": "Nimmo",
+      "pinAndReleaseTechnique": "Pin and Release Technique",
+      "shockwaveTherapy": "Shockwave Therapy",
+      "spray &StetchTechnique": "Spray & Stetch Technique",
+      "strain/counterStrainTechnique": "Strain/Counter-Strain Technique",
+      "therapeuticVibration": "Therapeutic Vibration (Direct or whole body)",
+      "triggerPointTherapy &IschemicCompression": "Trigger Point Therapy & ischemic compression",
+      "ultrasoundTherapy": "Ultrasound Therapy",
+      "webster": "Webster",
+      "bioEnergeticSynchronizationTechnique": "Bio-Energetic Synchronization Technique (BEST)",
+      "bioGeometricIntegration": "Bio-Geometric Integration (BGI)",
+      "chiropracticManipulativeReflexTechnique": "Chiropractic Manipulative Reflex Technique (CMRT)",
+      "directionalNonForceTechniqueVanRumpt": "Directional Non-Force Technique-Van Rumpt",
+      "korenSpecificTechnique": "Koren Specific Technique",
+      "loganBasicTechnique": "Logan Basic Technique",
+      "networkSpinalAnalysis": "Network Spinal Analysis (NSA)",
+      "neuroEmotionalTechnique": "Neuro-Emotional Technique (NET)",
+      "talskyTonalChiropractic": "Talsky Tonal Chiropractic",
+      "tonalIntegrativeTechnique": "Tonal Integrative Technique",
+      "education": "Education",
+      "ergonomicAdvices": "Ergonomic advices",
+      "exercisePrescription": "Exercise prescription",
+      "footOrthotics": "Foot Orthotics (fabrication and modification)",
+      "herbalMedicine": "Herbal Medicine",
+      "nutritionalPrescription": "Nutritional prescription",
+      "orthotics &Brace": "Orthotics & brace (prescription)",
+      "psychosocialRiskFactorManagement": "Psychosocial risk factor management",
+      "weightReductionProgram": "Weight reduction program",
+      "appliedKinesiology": "Applied Kinesiology",
+      "chiropracticBioPhysics": "Chiropractic BioPhysics (CBP)",
+      "exerciseSupervision": "Exercise supervision",
+      "functionalNeurology": "Functional Neurology"
     },
     "other": "Autres (séparés par des virgules)",
     "gecc": "Attentes globales de changement clinique",
