feat(client): updated translations

--- a/packages/client/public/locales/en/translation.json
+++ b/packages/client/public/locales/en/translation.json
@@ -116,7 +116,7 @@
         "activityInterference": "Activity Interference",
         "affectiveInterference": "Affective Interference",
         "sub": "Subtotal Score",
-        "risk": "Risk",
+        "risk": "Risk of chronicity",
         "work": "Work",
         "sport": "Sport",
         "disability/symptom": "Disability/Symptom",
@@ -203,19 +203,19 @@
     "professional": "Professional's Name",
     "profession": "Profession",
     "civilStatus": "Civil status",
-    "nbChildrens": "Number of childrens",
+    "nbChildrens": "Number of children",
     "occupation": "Occupation",
     "employmentStatus": "Employment Status",
     "chiefComplaint": "Chief complaint",
     "onsetDate": "Date of onset",
     "onsetType": "Type of onset",
-    "injuryMechanism": "Mecanism of injury",
+    "injuryMechanism": "Mechanism of injury:",
     "evolution": "Evolution",
     "recurrence": "Recurrence",
     "secondaryComplaints": "Secondary complaints",
     "comorbidity": "Comorbidity",
     "isReveivingTreatment": "Is receiving treatment",
-    "activityLimitation": "Activity limitaion",
+    "activityLimitation": "Activity limitation",
     "commorbidityHeart": "Heart disease",
     "commorbidityBloodPressure": "High blood pressure",
     "commorbidityLungDisease": "Lung disease",
@@ -239,8 +239,8 @@
     "differentialDiagnosis": "Differential diagnosis",
     "diagnosis": "Diagnosis of Chief complaint",
     "additionalDiagnosis": "Secondary complaint(s) Diagnoses",
-    "nbTx": "Number of treatments",
-    "frequency": "Treatment frequency",
+    "nbTx": "Number of treatments recommended",
+    "frequency": "Recommended treatment frequency",
     "intensive": "Intensive",
     "periodic": "Periodic",
     "prn": "PRN",
@@ -251,7 +251,7 @@
       "maintenanceCare": "Maintenance care",
       "primaryPrevention": "Primary prevention & Wellness"
     },
-    "planOfManagement": "Plan of Management",
+    "planOfManagement": "Treatment plan",
     "techniques": {
       "categories": {
         "hvla": "High-velocity Low-amplitude (HVLA) manipulation or Mobilization Techniques",
@@ -340,7 +340,7 @@
       "functionalNeurology": "Functional Neurology"
     },
     "other": "Other (separate by comma)",
-    "gecc": "Global Expectation Of Clinical Change",
+    "gecc": "Global Expectation of Clinical Change (-10= very deteriorated, 0= stable and +10= very improved)",
     "none": "None",
     "improvement": "Improvement reported by patient",
     "improvementPain": "Pain",
@@ -364,13 +364,13 @@
     "diagnosisTitle": "Diagnosis & Clinical impression",
     "currentEpisode": "Current episode of care",
     "prognosis": "Prognosis",
-    "patientData": "Patient Data",
+    "patientData": "Patient Identification",
     "about": "About this report",
-    "demographics": "Demographics",
-    "complaint": "Complaint",
+    "demographics": "Socio-demographic data",
+    "complaint": "Complaint(s)",
     "dob": "Date of Birth",
-    "allPainAreas": "All Pain Areas",
-    "relatedPainAreas": "Related Pain Areas",
+    "allPainAreas": "Total body painful areas",
+    "relatedPainAreas": "Painful area(s) related to chief complaint",
     "findings": "Relevant objective findings",
     "investigationResults": "Relevant objective clinical findings and imaging/ investigation results",
     "additionalInvestigation": "Additional investigation has been requested or planned",
