--- a/packages/client/public/locales/fr/translation.json
+++ b/packages/client/public/locales/fr/translation.json
@@ -203,13 +203,13 @@
     "professional": "Nom du professionnel",
     "profession": "Profession",
     "civilStatus": "Statut civil",
-    "nbChildrens": "Numbre d'enfants",
+    "nbChildrens": "Nombre d'enfants",
     "occupation": "Occupation",
     "employmentStatus": "Statut d'emploi",
     "chiefComplaint": "Motif de consultation principal",
     "onsetDate": "Date de début",
     "onsetType": "Apparition",
-    "injuryMechanism": "Mécanisme d'apparition",
+    "injuryMechanism": "Mécanisme d’apparition",
     "evolution": "Évolution",
     "recurrence": "Récurrence",
     "secondaryComplaints": "Motifs de consultation secondaires",
@@ -239,8 +239,8 @@
     "differentialDiagnosis": "Diagnostic différentiel",
     "diagnosis": "Diagnostic du Motif principal de consultation",
     "additionalDiagnosis": "Diagnostic(s) des Motif(s) secondaire(s) de consultation",
-    "nbTx": "Nombre de traitements",
-    "frequency": "Fréquence des traitements",
+    "nbTx": "Nombre de traitements recommandés",
+    "frequency": "Fréquence recommandée des traitements ",
     "intensive": "Intensifs",
     "periodic": "Périodiques",
     "prn": "PRN",
@@ -251,7 +251,7 @@
       "maintenanceCare": "Soins de maintien",
       "primaryPrevention": "Prévention primaire et bien-être"
     },
-    "planOfManagement": "Plan de soins",
+    "planOfManagement": "Modalité(s) thérapeutique(s)",
     "techniques": {
       "categories": {
         "hvla": "Techniques d’ajustement (avec une force de  haute vélocité et basse amplitude) ou de mobilisation",
@@ -340,7 +340,7 @@
       "functionalNeurology": "Functional Neurology"
     },
     "other": "Autres (séparés par des virgules)",
-    "gecc": "Attentes globales de changement clinique",
+    "gecc": "Attente Globale de changement clinique (-10= très détérioré, 0= stable et +10= très amélioré)",
     "none": "Aucun",
     "improvement": "Amélioration rapportée par le patient",
     "improvementPain": "Douleur",
@@ -364,13 +364,13 @@
     "diagnosisTitle": "Diagnostic & impression clinique",
     "currentEpisode": "Épisode actuel de soins",
     "prognosis": "Prognostic",
-    "patientData": "Données patient",
+    "patientData": "Identification du patient",
     "about": "À propos de ce rapport",
-    "demographics": "Données démographiques",
-    "complaint": "Problème",
+    "demographics": "Données sociodémographiques",
+    "complaint": "Motif(s) de consultation",
     "dob": "Date de Naissance",
-    "allPainAreas": "Toutes les zones douloureuses",
-    "relatedPainAreas": "Zones douloureuses associées au motif de consultation principal",
+    "allPainAreas": "Zone(s) douloureuse(s) associée(s) au motif de consultation principal",
+    "relatedPainAreas": "Toutes les zones douloureuses du corps",
     "findings": "Relevant objective findings",
     "investigationResults": "Données cliniques objective et résultats d’imagerie(s)/ d’investigation(s) concordants",
     "additionalInvestigation": "Investigation complémentaire demandée ou prévue",
