feat(client): updated about page with faq

--- a/packages/client/public/locales/en/translation.json
+++ b/packages/client/public/locales/en/translation.json
@@ -1,22 +1,23 @@
 {
   "guest": {
     "about": {
-      "title": "About PatientProgress",
-      "p1": "The PatientProgress web-app is made to facilitate medical research, while being very convenient and time-saving for the professional and the patient.",
-      "features": "Features",
-      "patient": "For the patient",
-      "patient1": "Fill the questionnaires required by your professional",
-      "patient2": "Visualize your progress with graphs generated with your data",
-      "patient3": "Easy access to contact information about your professional",
-      "professional": "For the professional",
-      "professional1": "Choose which questionnaires you want the patient to fill",
-      "professional2": "See the filled questionnaires and export them to PDF",
-      "professional3": "Write reports that are optionally pre-filled with patient data",
-      "professional4": "Schedule questionnaires for a individual patient",
-      "professional5": "Visualize the progress of all your patient in a interactive graph",
-      "researcher": "For the researcher",
-      "researcher1": "Access the powerful PatientProgress API to retrieve anonymized patient data",
-      "researcher2": "All the patient's & professional's anonymized data are treatable because of their JSON format"
+      "p1": "A secure, free and open-source and simple platform created to facilitate clinical research.",
+      "p2": "PatientProgress allows healthcare professionals to send questionnaires to their patients and study their responses easily and quickly.",
+      "sub1": "Secure",
+      "sub2": "Free and open-source",
+      "sub3": "Simple",
+      "p3": "Because of the nature of the data processed by the application, security is a priority. Data travels encrypted and is stored encrypted to the highest world standards. A multitude of security systems are in place to ensure the safety of your data. ",
+      "p4": "PatientProgress is an open source application under the GPL version 3 license. This means, among other things, that anyone who wants to can view the source code. The application is free, because it is important to us that users can check what is actually being done with their data.",
+      "p5": "The interface of the application is simple and easy to use so that anyone can use the application, regardless of their level of experience with technology.",
+      "q1": "If the application is open source and the source code is public, is the data public too?",
+      "r1": "No. The application you are working on right now is linked to a database that is specific to it. The address of this database is missing from the source code and only the server has access to this address. So it is impossible to access or intercept the data with the source code.",
+      "q2": "What happens if my patient account is compromised, what information will the hackers have access to?",
+      "r2": "First, if you suspect that your account has been compromised, please write an email to support@hainstech.com. The hackers will only have access to your name, date of birth, professional profile, and remaining questionnaires. PatientProgress has a multitude of security measures to prevent this from happening. The best security measure is that your password is strong and different from the one you use on other applications.",
+      "q3": "How can I be sure that my professional is protecting my personal information?",
+      "r3": "In addition to being educated about data security, professionals are subject to a multitude of strict security measures and a rigorous authentication process.",
+      "q4": "Where can I access the application source code?",
+      "r4": "The app directory is available on GitHub: ",
+      "email": "If you want to ask us a question that is not listed here, please write an email to support@hainstech.com."
     },
     "login": {
       "title": "Sign into the application",
