--- a/packages/client/public/locales/fr/translation.json
+++ b/packages/client/public/locales/fr/translation.json
@@ -1,22 +1,23 @@
 {
   "guest": {
     "about": {
-      "title": "À propos de PatientProgress",
-      "p1": "L'application Web PatientProgress est conçue pour faciliter la recherche médicale, tout en étant très pratique et facile d'utilisation pour le professionnel et le patient.",
-      "features": "Caractéristiques",
-      "patient": "Pour le patient",
-      "patient1": "Remplissez les questionnaires requis par votre professionnel",
-      "patient2": "Visualisez votre progression avec des graphiques générés avec vos données",
-      "patient3": "Accès facile aux coordonnées de votre professionnel",
-      "professional": "Pour le professionnel",
-      "professional1": "Choisissez les questionnaires que vous souhaitez que le patient remplisse",
-      "professional2": "Consultez les questionnaires remplis et exportez-les au format PDF",
-      "professional3": "Rédiger des rapports éventuellement pré-remplis avec les données du patient",
-      "professional4": "Schedule questionnaires for a individual patient",
-      "professional5": "Visualize the progress of all your patient in a interactive graph",
-      "researcher": "Pour le chercheur",
-      "researcher1": "Accédez au puissant API PatientProgress pour récupérer des données patient anonymisées",
-      "researcher2": "Toutes les données anonymisées du patient et du professionnel sont traitables en raison de leur format JSON"
+      "p1": "Une plateforme sécuritaire, libre et simple créée afin de faciliter la recherche clinique.",
+      "p2": "PatientProgress permet aux professionnels de la santé d’envoyer des questionnaires à leurs patients et d’étudier leurs réponses facilement et rapidement.",
+      "sub1": "Sécuritaire",
+      "sub2": "Libre",
+      "sub3": "Simple",
+      "p3": "À cause de la nature des données traitées par l’application, la sécurité est prioritaire. Les données voyagent encryptées et sont stockées encryptées selon les plus hauts standards mondiaux. Une multitude de systèmes de sécurités sont mis en place afin de garantir la sécurité de vos données. ",
+      "p4": "PatientProgress est une application libre ouverte sous la licence GPL version 3. Cela signifie entre autres que quiconque le désirant peut consulter le code source. L’application est libre, car il est important pour nous que les utilisateurs puissent vérifier ce qui est fait concrètement avec leurs données.",
+      "p5": "L’interface de l’application est simple et facile d’utilisation afin de permettre à quiconque d’utiliser l’application, peu importe leur niveau d’expérience avec la technologie.",
+      "q1":"Si l’application est libre et que le code source est publique, est-ce que les données sont publiques aussi?",
+      "r1":"Non. L’application sur laquelle vous êtes en ce moment est liée à une base de données qui lui est spécifique. L’adresse de cette base de données est absente du code source et seulement le serveur a accès à cette adresse. Il est donc impossible d’accéder aux données ou de les intercepter avec le code source.",
+      "q2":"Qu’arrive-t-il si mon compte de patient est compromis, à quelles informations les pirates auront accès?",
+      "r2":"Premièrement, si vous suspectez que votre compte ait été compromis, veuillez écrire un courriel à support@hainstech.com. Les pirates auront seulement accès à votre nom, votre date de naissance, le profil de votre professionnel et les questionnaires qu’il vous reste à remplir. PatientProgress dispose d’une multitude de mesures de sécurité afin d’éviter ce genre d’évènements. La meilleure mesure de sécurité reste le fait que votre mot de passe soit fort et différent de celui que vous utilisez sur les autres applications.",
+      "q3":"Comment m’assurer que mon professionnel protège bien mes informations personnelles?",
+      "r3":"En plus d’être sensibilisés sur la sécurité des données, les professionnels sont soumis à une multitude de mesures de sécurité strictes et à un processus d’authentification rigoureux",
+      "q4": "Où puis-je avoir accès au code source de l’application?",
+      "r4": "Le répertoire de l’application est disponible sur GitHub: ",
+      "email":"Si vous voulez nous poser une question qui n’apparaît pas ici, veuillez écrire un courriel à support@hainstech.com."
     },
     "login": {
       "title": "Se connecter à l'application",
